Profining info, system info

--- a/Notes/Profiling/1.gprof-serial.md
+++ b/Notes/Profiling/1.gprof-serial.md
@@ -137,3 +137,170 @@ Index by function name
   [10] free_relu              [13] make_pool_layer
   [17] free_softmax           [14] make_relu_layer
 olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial_code$ 
+
+---
+
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial_code$ ./cnn-cifar10 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:2.218654 seconds
+Create Network time:0.000000 seconds
+Load Network Parameters time:0.011999 seconds
+Create Ouputs time:0.000000 seconds
+Net Forward total time:1779.746342 seconds
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.004008 seconds
+Free memory time:0.060089 seconds
+Total time:1782.041092 seconds
+END!
+
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial_code$ gprof ./cnn-cifar10 -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls   s/call   s/call  name    
+ 98.96   1763.61  1763.61   150000     0.01     0.01  conv_forward
+  0.67   1775.56    11.95   150000     0.00     0.00  pool_forward
+  0.33   1781.39     5.83   150000     0.00     0.00  relu_forward
+  0.12   1783.52     2.13        1     2.13     2.13  load_data
+  0.04   1784.20     0.68    50000     0.00     0.00  fc_forward
+  0.00   1784.20     0.00    50000     0.00     0.00  softmax_forward
+  0.00   1784.20     0.00        3     0.00     0.00  free_conv
+  0.00   1784.20     0.00        3     0.00     0.00  free_pool
+  0.00   1784.20     0.00        3     0.00     0.00  free_relu
+  0.00   1784.20     0.00        3     0.00     0.00  load_conv
+  0.00   1784.20     0.00        3     0.00     0.00  make_conv_layer
+  0.00   1784.20     0.00        3     0.00     0.00  make_pool_layer
+  0.00   1784.20     0.00        3     0.00     0.00  make_relu_layer
+  0.00   1784.20     0.00        2     0.00     0.00  malloc2D
+  0.00   1784.20     0.00        1     0.00     0.00  free_fc
+  0.00   1784.20     0.00        1     0.00     0.00  free_softmax
+  0.00   1784.20     0.00        1     0.00     0.00  load_fc
+  0.00   1784.20     0.00        1     0.00     0.00  make_fc_layer
+  0.00   1784.20     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 2 byte(s) for 0.00% of 1784.20 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.00 1784.20                 main [1]
+             1763.61    0.00  150000/150000      conv_forward [2]
+               11.95    0.00  150000/150000      pool_forward [3]
+                5.83    0.00  150000/150000      relu_forward [4]
+                2.13    0.00       1/1           load_data [5]
+                0.68    0.00   50000/50000       fc_forward [6]
+                0.00    0.00   50000/50000       softmax_forward [7]
+                0.00    0.00       3/3           make_conv_layer [12]
+                0.00    0.00       3/3           make_relu_layer [14]
+                0.00    0.00       3/3           make_pool_layer [13]
+                0.00    0.00       3/3           load_conv [11]
+                0.00    0.00       3/3           free_pool [9]
+                0.00    0.00       3/3           free_relu [10]
+                0.00    0.00       3/3           free_conv [8]
+                0.00    0.00       2/2           malloc2D [15]
+                0.00    0.00       1/1           make_fc_layer [19]
+                0.00    0.00       1/1           make_softmax_layer [20]
+                0.00    0.00       1/1           load_fc [18]
+                0.00    0.00       1/1           free_fc [16]
+                0.00    0.00       1/1           free_softmax [17]
+-----------------------------------------------
+             1763.61    0.00  150000/150000      main [1]
+[2]     98.8 1763.61    0.00  150000         conv_forward [2]
+-----------------------------------------------
+               11.95    0.00  150000/150000      main [1]
+[3]      0.7   11.95    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                5.83    0.00  150000/150000      main [1]
+[4]      0.3    5.83    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                2.13    0.00       1/1           main [1]
+[5]      0.1    2.13    0.00       1         load_data [5]
+-----------------------------------------------
+                0.68    0.00   50000/50000       main [1]
+[6]      0.0    0.68    0.00   50000         fc_forward [6]
+-----------------------------------------------
+                0.00    0.00   50000/50000       main [1]
+[7]      0.0    0.00    0.00   50000         softmax_forward [7]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[8]      0.0    0.00    0.00       3         free_conv [8]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[9]      0.0    0.00    0.00       3         free_pool [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_relu [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         load_conv [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         make_conv_layer [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         make_pool_layer [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_relu_layer [14]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[15]     0.0    0.00    0.00       2         malloc2D [15]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[16]     0.0    0.00    0.00       1         free_fc [16]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[17]     0.0    0.00    0.00       1         free_softmax [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         load_fc [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         make_fc_layer [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         make_softmax_layer [20]
+-----------------------------------------------
+
+
+Index by function name
+
+   [2] conv_forward           [11] load_conv              [20] make_softmax_layer
+   [6] fc_forward              [5] load_data              [15] malloc2D
+   [8] free_conv              [18] load_fc                 [3] pool_forward
+  [16] free_fc                [12] make_conv_layer         [4] relu_forward
+   [9] free_pool              [19] make_fc_layer           [7] softmax_forward
+  [10] free_relu              [13] make_pool_layer
+  [17] free_softmax           [14] make_relu_layer
+
+  ---
+
+  olia@krylov100:~/Diplomatiki/cnn-cifar10_0$ ./cnn-cifar10 
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.669594 seconds
+Load Data to device time:0.276285 seconds
+Create Network time:0.037697 seconds
+Load Network Parameters time:0.007920 seconds
+Create Ouputs time:0.013725 seconds
+Net Forward total time:485.759548 seconds
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001580 seconds
+Free memory time:0.046519 seconds
+Total time:485.473680 seconds
+END!
+
