--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -36,6 +36,45 @@ Free memory time:0.024933 seconds
 Total time:536.818719 seconds
 END!
 ```
+# 37800 images
+```
+$ ./cnn-cifar10 
+Serial Code
+CNN for 37800 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Load Data time:0.716455 seconds
+Create Network time:0.000014 seconds
+Load Network Parameters time:0.015933 seconds
+Create Ouputs time:0.000367 seconds
+
+Net Forward total time:1245.024988 seconds
+    Time for conv1: 401.209395 seconds
+    Time for relu1: 3.561941 seconds
+    Time for pool1: 4.984796 seconds
+    Time for conv2: 643.743547 seconds
+    Time for relu2: 1.030007 seconds
+    Time for pool2: 1.520103 seconds
+    Time for conv3: 187.239154 seconds
+    Time for relu3: 0.300406 seconds
+    Time for pool3: 0.440653 seconds
+    Time for fc: 0.471294 seconds
+    Time for softmax: 0.055039 seconds
+
+  Conv: 1232.192096 seconds
+  ReLU: 4.892354 seconds
+  Pool: 6.945552 seconds
+  FC:   0.471294 seconds
+  Softmax: 0.055039 seconds
+
+Net Accuracy: 78.76 % 
+Net Accuracy time:0.003326 seconds
+Free memory time:0.046129 seconds
+Total time:1245.807212 seconds
+END!
+```
 
 # 1200 images
 ```
