--- a/Notes/6.2-Parallel-Timings.md
+++ b/Notes/6.2-Parallel-Timings.md
@@ -1,3 +1,43 @@
+# 1200 images
+
+```
+$ ./cnn-cifar10 
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.021294 seconds
+Load Data to device time:0.131595 seconds
+Create Network time:0.039105 seconds
+Load Network Parameters time:0.008543 seconds
+Create Ouputs time:0.001243 seconds
+
+Net Forward total time:1.214392 seconds
+    Time for conv1: 0.635944 seconds
+    Time for relu1: 0.016971 seconds
+    Time for pool1: 0.092689 seconds
+    Time for conv2: 0.219593 seconds
+    Time for relu2: 0.016668 seconds
+    Time for pool2: 0.033808 seconds
+    Time for conv3: 0.079960 seconds
+    Time for relu3: 0.016759 seconds
+    Time for pool3: 0.018714 seconds
+    Time for fc: 0.015794 seconds
+    Time for softmax: 0.052443 seconds
+
+  Conv: 0.935497 seconds
+  ReLU: 0.050398 seconds
+  Pool: 0.145211 seconds
+  FC:   0.015794 seconds
+  Softmax: 0.052443 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000021 seconds
+Free memory time:0.002077 seconds
+Total time:1.375682 seconds
+END!
+```
+
+# 13400 images
+
 ```
 $ ./cnn-cifar10 
 CNN for 13400 images
@@ -32,5 +72,125 @@ Net Accuracy: 78.71 %
 Net Accuracy time:0.000241 seconds
 Free memory time:0.015889 seconds
 Total time:16.296620 seconds
+END!
+```
+
+# 25600 images
+
+```
+$ ./cnn-cifar10 
+CNN for 25600 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Load Data time:0.390930 seconds
+Load Data to device time:0.212724 seconds
+Create Network time:0.042833 seconds
+Load Network Parameters time:0.009149 seconds
+Create Ouputs time:0.009322 seconds
+
+Net Forward total time:25.546127 seconds
+    Time for conv1: 13.310750 seconds
+    Time for relu1: 0.363441 seconds
+    Time for pool1: 1.948557 seconds
+    Time for conv2: 4.555131 seconds
+    Time for relu2: 0.365619 seconds
+    Time for pool2: 0.716651 seconds
+    Time for conv3: 1.694248 seconds
+    Time for relu3: 0.371312 seconds
+    Time for pool3: 0.400741 seconds
+    Time for fc: 0.339982 seconds
+    Time for softmax: 1.122997 seconds
+
+  Conv: 19.560129 seconds
+  ReLU: 1.100372 seconds
+  Pool: 3.065949 seconds
+  FC:   0.339982 seconds
+  Softmax: 1.122997 seconds
+
+Net Accuracy: 78.67 % 
+Net Accuracy time:0.000413 seconds
+Free memory time:0.025911 seconds
+Total time:25.455549 seconds
+END!
+```
+
+# 37800 images
+
+```
+CNN for 37800 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Load Data time:0.559108 seconds
+Load Data to device time:0.250043 seconds
+Create Network time:0.039981 seconds
+Load Network Parameters time:0.008980 seconds
+Create Ouputs time:0.011876 seconds
+
+Net Forward total time:37.820342 seconds
+    Time for conv1: 19.659899 seconds
+    Time for relu1: 0.535229 seconds
+    Time for pool1: 2.890635 seconds
+    Time for conv2: 6.807173 seconds
+    Time for relu2: 0.537191 seconds
+    Time for pool2: 1.066523 seconds
+    Time for conv3: 2.523270 seconds
+    Time for relu3: 0.543121 seconds
+    Time for pool3: 0.597850 seconds
+    Time for fc: 0.508946 seconds
+    Time for softmax: 1.642381 seconds
+
+  Conv: 28.990342 seconds
+  ReLU: 1.615541 seconds
+  Pool: 4.555008 seconds
+  FC:   0.508946 seconds
+  Softmax: 1.642381 seconds
+
+Net Accuracy: 78.76 % 
+Net Accuracy time:0.000601 seconds
+Free memory time:0.035514 seconds
+Total time:37.608229 seconds
+END!
+```
+# 50000 images
+
+```
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.808309 seconds
+Load Data to device time:0.300986 seconds
+Create Network time:0.042469 seconds
+Load Network Parameters time:0.009496 seconds
+Create Ouputs time:0.016556 seconds
+
+Net Forward total time:50.399257 seconds
+    Time for conv1: 26.018168 seconds
+    Time for relu1: 0.741822 seconds
+    Time for pool1: 3.846836 seconds
+    Time for conv2: 9.037217 seconds
+    Time for relu2: 0.739267 seconds
+    Time for pool2: 1.432693 seconds
+    Time for conv3: 3.385039 seconds
+    Time for relu3: 0.743161 seconds
+    Time for pool3: 0.812145 seconds
+    Time for fc: 0.696105 seconds
+    Time for softmax: 2.244520 seconds
+
+  Conv: 38.440424 seconds
+  ReLU: 2.224250 seconds
+  Pool: 6.091674 seconds
+  FC:   0.696105 seconds
+  Softmax: 2.244520 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000887 seconds
+Free memory time:0.051546 seconds
+Total time:50.012888 seconds
 END!
 ```
