profiling and timing with nlp using CPUs

--- a/Notes/6.2-Parallel-Timings.md
+++ b/Notes/6.2-Parallel-Timings.md
@@ -194,3 +194,48 @@ Free memory time:0.051546 seconds
 Total time:50.012888 seconds
 END!
 ```
+---
+
+> [!WARNING]
+> krilov100 - nlp
+
+# 50000 images
+```
+$ ./cnn-cifar10 
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:1.375994 seconds
+Load Data to device time:0.363660 seconds
+Create Network time:0.054769 seconds
+Load Network Parameters time:0.018388 seconds
+Create Ouputs time:0.030664 seconds
+
+Net Forward total time:59.631972 seconds
+    Time for conv1: 27.148771 seconds
+    Time for relu1: 1.348341 seconds
+    Time for pool1: 4.426774 seconds
+    Time for conv2: 10.122377 seconds
+    Time for relu2: 1.346884 seconds
+    Time for pool2: 2.013209 seconds
+    Time for conv3: 4.438687 seconds
+    Time for relu3: 1.312126 seconds
+    Time for pool3: 1.342707 seconds
+    Time for fc: 1.226090 seconds
+    Time for softmax: 3.731741 seconds
+
+  Conv: 41.709835 seconds
+  ReLU: 4.007351 seconds
+  Pool: 7.782690 seconds
+  FC:   1.226090 seconds
+  Softmax: 3.731741 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.002754 seconds
+Free memory time:0.152922 seconds
+Total time:58.879135 seconds
+END!
+```
