--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -156,3 +156,175 @@ Free memory time:0.056185 seconds
 Total time:1764.764805 seconds
 END!	
 ```
+# Profiling
+
+>[!WARNING]
+>krilov100 - nlp
+
+```
+$ ./cnn-cifar10-prof 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:2.817234 seconds
+Create Network time:0.000000 seconds
+Load Network Parameters time:0.027995 seconds
+Create Ouputs time:0.000000 seconds
+
+Net Forward total time:2945.112939 seconds
+    Time for conv1: 948.150824 seconds
+    Time for relu1: 5.194366 seconds
+    Time for pool1: 9.903775 seconds
+    Time for conv2: 1526.747779 seconds
+    Time for relu2: 1.511098 seconds
+    Time for pool2: 3.003849 seconds
+    Time for conv3: 447.701324 seconds
+    Time for relu3: 0.492184 seconds
+    Time for pool3: 0.887946 seconds
+    Time for fc: 0.865882 seconds
+    Time for softmax: 0.087438 seconds
+
+  Conv: 2922.599927 seconds
+  ReLU: 7.197648 seconds
+  Pool: 13.795570 seconds
+  FC:   0.865882 seconds
+  Softmax: 0.087438 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.004001 seconds
+Free memory time:0.060060 seconds
+Total time:2948.022229 seconds
+END!
+```
+
+## Gprof
+```
+$ gprof ./cnn-cifar10-prof -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls   s/call   s/call  name    
+ 99.30   2928.76  2928.76   150000     0.02     0.02  conv_forward
+  0.44   2941.82    13.06   150000     0.00     0.00  pool_forward
+  0.22   2948.42     6.60   150000     0.00     0.00  relu_forward
+  0.09   2951.16     2.74        1     2.74     2.74  load_data
+  0.03   2951.96     0.80    50000     0.00     0.00  fc_forward
+  0.00   2951.97     0.01    50000     0.00     0.00  softmax_forward
+  0.00   2951.98     0.01                             main
+  0.00   2951.98     0.00        3     0.00     0.00  free_conv
+  0.00   2951.98     0.00        3     0.00     0.00  free_pool
+  0.00   2951.98     0.00        3     0.00     0.00  free_relu
+  0.00   2951.98     0.00        3     0.00     0.00  load_conv
+  0.00   2951.98     0.00        3     0.00     0.00  make_conv_layer
+  0.00   2951.98     0.00        3     0.00     0.00  make_pool_layer
+  0.00   2951.98     0.00        3     0.00     0.00  make_relu_layer
+  0.00   2951.98     0.00        2     0.00     0.00  malloc2D
+  0.00   2951.98     0.00        1     0.00     0.00  free_fc
+  0.00   2951.98     0.00        1     0.00     0.00  free_softmax
+  0.00   2951.98     0.00        1     0.00     0.00  load_fc
+  0.00   2951.98     0.00        1     0.00     0.00  make_fc_layer
+  0.00   2951.98     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 2 byte(s) for 0.00% of 2951.98 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.01 2951.97                 main [1]
+             2928.76    0.00  150000/150000      conv_forward [2]
+               13.06    0.00  150000/150000      pool_forward [3]
+                6.60    0.00  150000/150000      relu_forward [4]
+                2.74    0.00       1/1           load_data [5]
+                0.80    0.00   50000/50000       fc_forward [6]
+                0.01    0.00   50000/50000       softmax_forward [7]
+                0.00    0.00       3/3           make_conv_layer [12]
+                0.00    0.00       3/3           make_relu_layer [14]
+                0.00    0.00       3/3           make_pool_layer [13]
+                0.00    0.00       3/3           load_conv [11]
+                0.00    0.00       3/3           free_pool [9]
+                0.00    0.00       3/3           free_relu [10]
+                0.00    0.00       3/3           free_conv [8]
+                0.00    0.00       2/2           malloc2D [15]
+                0.00    0.00       1/1           make_fc_layer [19]
+                0.00    0.00       1/1           make_softmax_layer [20]
+                0.00    0.00       1/1           load_fc [18]
+                0.00    0.00       1/1           free_fc [16]
+                0.00    0.00       1/1           free_softmax [17]
+-----------------------------------------------
+             2928.76    0.00  150000/150000      main [1]
+[2]     99.2 2928.76    0.00  150000         conv_forward [2]
+-----------------------------------------------
+               13.06    0.00  150000/150000      main [1]
+[3]      0.4   13.06    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                6.60    0.00  150000/150000      main [1]
+[4]      0.2    6.60    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                2.74    0.00       1/1           main [1]
+[5]      0.1    2.74    0.00       1         load_data [5]
+-----------------------------------------------
+                0.80    0.00   50000/50000       main [1]
+[6]      0.0    0.80    0.00   50000         fc_forward [6]
+-----------------------------------------------
+                0.01    0.00   50000/50000       main [1]
+[7]      0.0    0.01    0.00   50000         softmax_forward [7]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[8]      0.0    0.00    0.00       3         free_conv [8]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[9]      0.0    0.00    0.00       3         free_pool [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_relu [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         load_conv [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         make_conv_layer [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         make_pool_layer [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_relu_layer [14]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[15]     0.0    0.00    0.00       2         malloc2D [15]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[16]     0.0    0.00    0.00       1         free_fc [16]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[17]     0.0    0.00    0.00       1         free_softmax [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         load_fc [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         make_fc_layer [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         make_softmax_layer [20]
+-----------------------------------------------
+
+
+Index by function name
+
+   [2] conv_forward           [11] load_conv              [14] make_relu_layer
+   [6] fc_forward              [5] load_data              [20] make_softmax_layer
+   [8] free_conv              [18] load_fc                [15] malloc2D
+  [16] free_fc                 [1] main                    [3] pool_forward
+   [9] free_pool              [12] make_conv_layer         [4] relu_forward
+  [10] free_relu              [19] make_fc_layer           [7] softmax_forward
+  [17] free_softmax           [13] make_pool_layer
+```
