--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -162,6 +162,16 @@ END!
 >krilov100 - nlp
 
 ```
+$ make
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -g -pg -o cnn-cifar10-prof main_serial.c layers_serial.c malloc2D.c
+main_serial.c:
+layers_serial.c:
+conv_forward:
+     62, FMA (fused multiply-add) instruction(s) generated
+fc_forward:
+    200, FMA (fused multiply-add) instruction(s) generated
+malloc2D.c:
+
 $ ./cnn-cifar10-prof 
 Serial Code
 CNN for 50000 images
@@ -170,34 +180,34 @@ Loading input batch 2...
 Loading input batch 3...
 Loading input batch 4...
 Loading input batch 5...
-Load Data time:2.817234 seconds
+Load Data time:2.346600 seconds
 Create Network time:0.000000 seconds
-Load Network Parameters time:0.027995 seconds
+Load Network Parameters time:0.008000 seconds
 Create Ouputs time:0.000000 seconds
 
-Net Forward total time:2945.112939 seconds
-    Time for conv1: 948.150824 seconds
-    Time for relu1: 5.194366 seconds
-    Time for pool1: 9.903775 seconds
-    Time for conv2: 1526.747779 seconds
-    Time for relu2: 1.511098 seconds
-    Time for pool2: 3.003849 seconds
-    Time for conv3: 447.701324 seconds
-    Time for relu3: 0.492184 seconds
-    Time for pool3: 0.887946 seconds
-    Time for fc: 0.865882 seconds
-    Time for softmax: 0.087438 seconds
+Net Forward total time:3213.477007 seconds
+    Time for conv1: 1034.820460 seconds
+    Time for relu1: 5.938601 seconds
+    Time for pool1: 10.973933 seconds
+    Time for conv2: 1665.419387 seconds
+    Time for relu2: 1.807552 seconds
+    Time for pool2: 3.242493 seconds
+    Time for conv3: 488.184598 seconds
+    Time for relu3: 0.493902 seconds
+    Time for pool3: 0.963003 seconds
+    Time for fc: 0.889915 seconds
+    Time for softmax: 0.107188 seconds
 
-  Conv: 2922.599927 seconds
-  ReLU: 7.197648 seconds
-  Pool: 13.795570 seconds
-  FC:   0.865882 seconds
-  Softmax: 0.087438 seconds
+  Conv: 3188.424445 seconds
+  ReLU: 8.240055 seconds
+  Pool: 15.179429 seconds
+  FC:   0.889915 seconds
+  Softmax: 0.107188 seconds
 
 Net Accuracy: 78.84 % 
 Net Accuracy time:0.004001 seconds
-Free memory time:0.060060 seconds
-Total time:2948.022229 seconds
+Free memory time:0.063994 seconds
+Total time:3215.899602 seconds
 END!
 ```
 
@@ -209,41 +219,41 @@ Flat profile:
 Each sample counts as 0.01 seconds.
   %   cumulative   self              self     total           
  time   seconds   seconds    calls   s/call   s/call  name    
- 99.30   2928.76  2928.76   150000     0.02     0.02  conv_forward
-  0.44   2941.82    13.06   150000     0.00     0.00  pool_forward
-  0.22   2948.42     6.60   150000     0.00     0.00  relu_forward
-  0.09   2951.16     2.74        1     2.74     2.74  load_data
-  0.03   2951.96     0.80    50000     0.00     0.00  fc_forward
-  0.00   2951.97     0.01    50000     0.00     0.00  softmax_forward
-  0.00   2951.98     0.01                             main
-  0.00   2951.98     0.00        3     0.00     0.00  free_conv
-  0.00   2951.98     0.00        3     0.00     0.00  free_pool
-  0.00   2951.98     0.00        3     0.00     0.00  free_relu
-  0.00   2951.98     0.00        3     0.00     0.00  load_conv
-  0.00   2951.98     0.00        3     0.00     0.00  make_conv_layer
-  0.00   2951.98     0.00        3     0.00     0.00  make_pool_layer
-  0.00   2951.98     0.00        3     0.00     0.00  make_relu_layer
-  0.00   2951.98     0.00        2     0.00     0.00  malloc2D
-  0.00   2951.98     0.00        1     0.00     0.00  free_fc
-  0.00   2951.98     0.00        1     0.00     0.00  free_softmax
-  0.00   2951.98     0.00        1     0.00     0.00  load_fc
-  0.00   2951.98     0.00        1     0.00     0.00  make_fc_layer
-  0.00   2951.98     0.00        1     0.00     0.00  make_softmax_layer
+ 99.29   3194.24  3194.24   150000     0.02     0.02  conv_forward
+  0.46   3209.15    14.91   150000     0.00     0.00  pool_forward
+  0.24   3216.97     7.82   150000     0.00     0.00  relu_forward
+  0.07   3219.20     2.23        1     2.23     2.23  load_data
+  0.03   3220.09     0.89    50000     0.00     0.00  fc_forward
+  0.00   3220.13     0.04                             main
+  0.00   3220.14     0.01    50000     0.00     0.00  softmax_forward
+  0.00   3220.14     0.00        3     0.00     0.00  free_conv
+  0.00   3220.14     0.00        3     0.00     0.00  free_pool
+  0.00   3220.14     0.00        3     0.00     0.00  free_relu
+  0.00   3220.14     0.00        3     0.00     0.00  load_conv
+  0.00   3220.14     0.00        3     0.00     0.00  make_conv_layer
+  0.00   3220.14     0.00        3     0.00     0.00  make_pool_layer
+  0.00   3220.14     0.00        3     0.00     0.00  make_relu_layer
+  0.00   3220.14     0.00        2     0.00     0.00  malloc2D
+  0.00   3220.14     0.00        1     0.00     0.00  free_fc
+  0.00   3220.14     0.00        1     0.00     0.00  free_softmax
+  0.00   3220.14     0.00        1     0.00     0.00  load_fc
+  0.00   3220.14     0.00        1     0.00     0.00  make_fc_layer
+  0.00   3220.14     0.00        1     0.00     0.00  make_softmax_layer
 
 
                         Call graph
 
 
-granularity: each sample hit covers 2 byte(s) for 0.00% of 2951.98 seconds
+granularity: each sample hit covers 2 byte(s) for 0.00% of 3220.14 seconds
 
 index % time    self  children    called     name
                                                  <spontaneous>
-[1]    100.0    0.01 2951.97                 main [1]
-             2928.76    0.00  150000/150000      conv_forward [2]
-               13.06    0.00  150000/150000      pool_forward [3]
-                6.60    0.00  150000/150000      relu_forward [4]
-                2.74    0.00       1/1           load_data [5]
-                0.80    0.00   50000/50000       fc_forward [6]
+[1]    100.0    0.04 3220.10                 main [1]
+             3194.24    0.00  150000/150000      conv_forward [2]
+               14.91    0.00  150000/150000      pool_forward [3]
+                7.82    0.00  150000/150000      relu_forward [4]
+                2.23    0.00       1/1           load_data [5]
+                0.89    0.00   50000/50000       fc_forward [6]
                 0.01    0.00   50000/50000       softmax_forward [7]
                 0.00    0.00       3/3           make_conv_layer [12]
                 0.00    0.00       3/3           make_relu_layer [14]
@@ -259,20 +269,20 @@ index % time    self  children    called     name
                 0.00    0.00       1/1           free_fc [16]
                 0.00    0.00       1/1           free_softmax [17]
 -----------------------------------------------
-             2928.76    0.00  150000/150000      main [1]
-[2]     99.2 2928.76    0.00  150000         conv_forward [2]
+             3194.24    0.00  150000/150000      main [1]
+[2]     99.2 3194.24    0.00  150000         conv_forward [2]
 -----------------------------------------------
-               13.06    0.00  150000/150000      main [1]
-[3]      0.4   13.06    0.00  150000         pool_forward [3]
+               14.91    0.00  150000/150000      main [1]
+[3]      0.5   14.91    0.00  150000         pool_forward [3]
 -----------------------------------------------
-                6.60    0.00  150000/150000      main [1]
-[4]      0.2    6.60    0.00  150000         relu_forward [4]
+                7.82    0.00  150000/150000      main [1]
+[4]      0.2    7.82    0.00  150000         relu_forward [4]
 -----------------------------------------------
-                2.74    0.00       1/1           main [1]
-[5]      0.1    2.74    0.00       1         load_data [5]
+                2.23    0.00       1/1           main [1]
+[5]      0.1    2.23    0.00       1         load_data [5]
 -----------------------------------------------
-                0.80    0.00   50000/50000       main [1]
-[6]      0.0    0.80    0.00   50000         fc_forward [6]
+                0.89    0.00   50000/50000       main [1]
+[6]      0.0    0.89    0.00   50000         fc_forward [6]
 -----------------------------------------------
                 0.01    0.00   50000/50000       main [1]
 [7]      0.0    0.01    0.00   50000         softmax_forward [7]
