--- a/Notes/asus/6.1-Serial.md
+++ b/Notes/asus/6.1-Serial.md
@@ -114,3 +114,344 @@ Free memory time:0.039219 seconds
 Total time:1648.611241 seconds
 END!
 ```
+---
+
+# Profiling
+
+$ ./cnn-cifar10-prof 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:1.835036 seconds
+Create Network time:0.000000 seconds
+Load Network Parameters time:0.008002 seconds
+Create Ouputs time:0.000000 seconds
+
+Net Forward total time:2408.581432 seconds
+    Time for conv1: 752.923653 seconds
+    Time for relu1: 4.108099 seconds
+    Time for pool1: 7.717730 seconds
+    Time for conv2: 1213.572470 seconds
+    Time for relu2: 1.151649 seconds
+    Time for pool2: 2.529370 seconds
+    Time for conv3: 424.445379 seconds
+    Time for relu3: 0.321503 seconds
+    Time for pool3: 0.650087 seconds
+    Time for fc: 0.737179 seconds
+    Time for softmax: 0.072000 seconds
+
+  Conv: 2390.941502 seconds
+  ReLU: 5.581251 seconds
+  Pool: 10.897187 seconds
+  FC:   0.737179 seconds
+  Softmax: 0.072000 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.004001 seconds
+Free memory time:0.032004 seconds
+Total time:2410.460475 seconds
+END!
+
+## gprof 
+```
+$ gprof ./cnn-cifar10-prof -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls   s/call   s/call  name    
+ 99.23   2391.35  2391.35   150000     0.02     0.02  conv_forward
+  0.45   2402.09    10.74   150000     0.00     0.00  pool_forward
+  0.22   2407.39     5.30   150000     0.00     0.00  relu_forward
+  0.07   2409.17     1.78        1     1.78     1.78  load_data
+  0.03   2409.96     0.79    50000     0.00     0.00  fc_forward
+  0.00   2410.00     0.04                             main
+  0.00   2410.01     0.01    50000     0.00     0.00  softmax_forward
+  0.00   2410.02     0.01                             _init
+  0.00   2410.02     0.00        3     0.00     0.00  free_conv
+  0.00   2410.02     0.00        3     0.00     0.00  free_pool
+  0.00   2410.02     0.00        3     0.00     0.00  free_relu
+  0.00   2410.02     0.00        3     0.00     0.00  load_conv
+  0.00   2410.02     0.00        3     0.00     0.00  make_conv_layer
+  0.00   2410.02     0.00        3     0.00     0.00  make_pool_layer
+  0.00   2410.02     0.00        3     0.00     0.00  make_relu_layer
+  0.00   2410.02     0.00        2     0.00     0.00  malloc2D
+  0.00   2410.02     0.00        1     0.00     0.00  free_fc
+  0.00   2410.02     0.00        1     0.00     0.00  free_softmax
+  0.00   2410.02     0.00        1     0.00     0.00  load_fc
+  0.00   2410.02     0.00        1     0.00     0.00  make_fc_layer
+  0.00   2410.02     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 4 byte(s) for 0.00% of 2410.02 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.04 2409.97                 main [1]
+             2391.35    0.00  150000/150000      conv_forward [2]
+               10.74    0.00  150000/150000      pool_forward [3]
+                5.30    0.00  150000/150000      relu_forward [4]
+                1.78    0.00       1/1           load_data [5]
+                0.79    0.00   50000/50000       fc_forward [6]
+                0.01    0.00   50000/50000       softmax_forward [7]
+                0.00    0.00       3/3           make_conv_layer [13]
+                0.00    0.00       3/3           make_relu_layer [15]
+                0.00    0.00       3/3           make_pool_layer [14]
+                0.00    0.00       3/3           load_conv [12]
+                0.00    0.00       3/3           free_pool [10]
+                0.00    0.00       3/3           free_relu [11]
+                0.00    0.00       3/3           free_conv [9]
+                0.00    0.00       2/2           malloc2D [16]
+                0.00    0.00       1/1           make_fc_layer [20]
+                0.00    0.00       1/1           make_softmax_layer [21]
+                0.00    0.00       1/1           load_fc [19]
+                0.00    0.00       1/1           free_fc [17]
+                0.00    0.00       1/1           free_softmax [18]
+-----------------------------------------------
+             2391.35    0.00  150000/150000      main [1]
+[2]     99.2 2391.35    0.00  150000         conv_forward [2]
+-----------------------------------------------
+               10.74    0.00  150000/150000      main [1]
+[3]      0.4   10.74    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                5.30    0.00  150000/150000      main [1]
+[4]      0.2    5.30    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                1.78    0.00       1/1           main [1]
+[5]      0.1    1.78    0.00       1         load_data [5]
+-----------------------------------------------
+                0.79    0.00   50000/50000       main [1]
+[6]      0.0    0.79    0.00   50000         fc_forward [6]
+-----------------------------------------------
+                0.01    0.00   50000/50000       main [1]
+[7]      0.0    0.01    0.00   50000         softmax_forward [7]
+-----------------------------------------------
+                                                 <spontaneous>
+[8]      0.0    0.01    0.00                 _init [8]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[9]      0.0    0.00    0.00       3         free_conv [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_pool [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_relu [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         load_conv [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         make_conv_layer [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_pool_layer [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_relu_layer [15]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[16]     0.0    0.00    0.00       2         malloc2D [16]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[17]     0.0    0.00    0.00       1         free_fc [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         free_softmax [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         load_fc [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         make_fc_layer [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         make_softmax_layer [21]
+-----------------------------------------------
+
+
+Index by function name
+
+   [8] _init                  [18] free_softmax           [14] make_pool_layer
+   [2] conv_forward           [12] load_conv              [15] make_relu_layer
+   [6] fc_forward              [5] load_data              [21] make_softmax_layer
+   [9] free_conv              [19] load_fc                [16] malloc2D
+  [17] free_fc                 [1] main                    [3] pool_forward
+  [10] free_pool              [13] make_conv_layer         [4] relu_forward
+  [11] free_relu              [20] make_fc_layer           [7] softmax_forward
+
+```
+
+---
+1200 images
+-g -pg 
+
+```
+$ ./cnn-cifar10-prof 
+Serial Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.047809 seconds
+Create Network time:0.000000 seconds
+Load Network Parameters time:0.008392 seconds
+Create Ouputs time:0.000000 seconds
+
+Net Forward total time:56.208659 seconds
+    Time for conv1: 18.106585 seconds
+    Time for relu1: 0.102577 seconds
+    Time for pool1: 0.212610 seconds
+    Time for conv2: 29.098502 seconds
+    Time for relu2: 0.039995 seconds
+    Time for pool2: 0.050971 seconds
+    Time for conv3: 8.565418 seconds
+    Time for relu3: 0.007998 seconds
+    Time for pool3: 0.008003 seconds
+    Time for fc: 0.012000 seconds
+    Time for softmax: 0.000000 seconds
+
+  Conv: 55.770505 seconds
+  ReLU: 0.150570 seconds
+  Pool: 0.271584 seconds
+  FC:   0.012000 seconds
+  Softmax: 0.000000 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000000 seconds
+Free memory time:0.000000 seconds
+Total time:56.264860 seconds
+END!
+```
+
+-pg
+```
+$ gprof ./cnn-cifar10-prof -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls  ms/call  ms/call  name    
+ 99.13     38.68    38.68     3600    10.74    10.74  conv_forward
+  0.41     38.84     0.16     3600     0.04     0.04  relu_forward
+  0.36     38.98     0.14     3600     0.04     0.04  pool_forward
+  0.05     39.00     0.02     1200     0.02     0.02  fc_forward
+  0.05     39.02     0.02        1    20.00    20.00  load_data
+  0.00     39.02     0.00     1200     0.00     0.00  softmax_forward
+  0.00     39.02     0.00        3     0.00     0.00  free_conv
+  0.00     39.02     0.00        3     0.00     0.00  free_pool
+  0.00     39.02     0.00        3     0.00     0.00  free_relu
+  0.00     39.02     0.00        3     0.00     0.00  load_conv
+  0.00     39.02     0.00        3     0.00     0.00  make_conv_layer
+  0.00     39.02     0.00        3     0.00     0.00  make_pool_layer
+  0.00     39.02     0.00        3     0.00     0.00  make_relu_layer
+  0.00     39.02     0.00        2     0.00     0.00  malloc2D
+  0.00     39.02     0.00        1     0.00     0.00  free_fc
+  0.00     39.02     0.00        1     0.00     0.00  free_softmax
+  0.00     39.02     0.00        1     0.00     0.00  load_fc
+  0.00     39.02     0.00        1     0.00     0.00  make_fc_layer
+  0.00     39.02     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 4 byte(s) for 0.03% of 39.02 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.00   39.02                 main [1]
+               38.68    0.00    3600/3600        conv_forward [2]
+                0.16    0.00    3600/3600        relu_forward [3]
+                0.14    0.00    3600/3600        pool_forward [4]
+                0.02    0.00    1200/1200        fc_forward [5]
+                0.02    0.00       1/1           load_data [6]
+                0.00    0.00    1200/1200        softmax_forward [7]
+                0.00    0.00       3/3           make_conv_layer [12]
+                0.00    0.00       3/3           make_relu_layer [14]
+                0.00    0.00       3/3           make_pool_layer [13]
+                0.00    0.00       3/3           load_conv [11]
+                0.00    0.00       3/3           free_relu [10]
+                0.00    0.00       3/3           free_pool [9]
+                0.00    0.00       3/3           free_conv [8]
+                0.00    0.00       2/2           malloc2D [15]
+                0.00    0.00       1/1           make_fc_layer [19]
+                0.00    0.00       1/1           make_softmax_layer [20]
+                0.00    0.00       1/1           load_fc [18]
+                0.00    0.00       1/1           free_softmax [17]
+                0.00    0.00       1/1           free_fc [16]
+-----------------------------------------------
+               38.68    0.00    3600/3600        main [1]
+[2]     99.1   38.68    0.00    3600         conv_forward [2]
+-----------------------------------------------
+                0.16    0.00    3600/3600        main [1]
+[3]      0.4    0.16    0.00    3600         relu_forward [3]
+-----------------------------------------------
+                0.14    0.00    3600/3600        main [1]
+[4]      0.4    0.14    0.00    3600         pool_forward [4]
+-----------------------------------------------
+                0.02    0.00    1200/1200        main [1]
+[5]      0.1    0.02    0.00    1200         fc_forward [5]
+-----------------------------------------------
+                0.02    0.00       1/1           main [1]
+[6]      0.1    0.02    0.00       1         load_data [6]
+-----------------------------------------------
+                0.00    0.00    1200/1200        main [1]
+[7]      0.0    0.00    0.00    1200         softmax_forward [7]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[8]      0.0    0.00    0.00       3         free_conv [8]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[9]      0.0    0.00    0.00       3         free_pool [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_relu [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         load_conv [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         make_conv_layer [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         make_pool_layer [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_relu_layer [14]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[15]     0.0    0.00    0.00       2         malloc2D [15]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[16]     0.0    0.00    0.00       1         free_fc [16]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[17]     0.0    0.00    0.00       1         free_softmax [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         load_fc [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         make_fc_layer [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         make_softmax_layer [20]
+-----------------------------------------------
+
+
+Index by function name
+
+   [2] conv_forward           [11] load_conv              [20] make_softmax_layer
+   [5] fc_forward              [6] load_data              [15] malloc2D
+   [8] free_conv              [18] load_fc                 [4] pool_forward
+  [16] free_fc                [12] make_conv_layer         [3] relu_forward
+   [9] free_pool              [19] make_fc_layer           [7] softmax_forward
+  [10] free_relu              [13] make_pool_layer
+  [17] free_softmax           [14] make_relu_layer
+```
