--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -158,12 +158,9 @@ END!
 ```
 # Profiling
 
->[!WARNING]
->krilov100 - nlp
-
 ```
 $ make
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -g -pg -o cnn-cifar10-prof main_serial.c layers_serial.c malloc2D.c
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -o cnn-cifar10-prof main_serial.c layers_serial.c malloc2D.c
 main_serial.c:
 layers_serial.c:
 conv_forward:
@@ -172,7 +169,7 @@ fc_forward:
     200, FMA (fused multiply-add) instruction(s) generated
 malloc2D.c:
 
-$ ./cnn-cifar10-prof 
+$ ./cnn-cifar10-prof
 Serial Code
 CNN for 50000 images
 Loading input batch 1...
@@ -180,34 +177,34 @@ Loading input batch 2...
 Loading input batch 3...
 Loading input batch 4...
 Loading input batch 5...
-Load Data time:2.346600 seconds
+Load Data time:0.951845 seconds
 Create Network time:0.000000 seconds
-Load Network Parameters time:0.008000 seconds
+Load Network Parameters time:0.007999 seconds
 Create Ouputs time:0.000000 seconds
 
-Net Forward total time:3213.477007 seconds
-    Time for conv1: 1034.820460 seconds
-    Time for relu1: 5.938601 seconds
-    Time for pool1: 10.973933 seconds
-    Time for conv2: 1665.419387 seconds
-    Time for relu2: 1.807552 seconds
-    Time for pool2: 3.242493 seconds
-    Time for conv3: 488.184598 seconds
-    Time for relu3: 0.493902 seconds
-    Time for pool3: 0.963003 seconds
-    Time for fc: 0.889915 seconds
-    Time for softmax: 0.107188 seconds
+Net Forward total time:1522.034694 seconds
+    Time for conv1: 490.359118 seconds
+    Time for relu1: 4.143262 seconds
+    Time for pool1: 6.025717 seconds
+    Time for conv2: 787.138191 seconds
+    Time for relu2: 1.270840 seconds
+    Time for pool2: 1.762011 seconds
+    Time for conv3: 229.270685 seconds
+    Time for relu3: 0.368773 seconds
+    Time for pool3: 0.544104 seconds
+    Time for fc: 0.598801 seconds
+    Time for softmax: 0.063981 seconds
 
-  Conv: 3188.424445 seconds
-  ReLU: 8.240055 seconds
-  Pool: 15.179429 seconds
-  FC:   0.889915 seconds
-  Softmax: 0.107188 seconds
+  Conv: 1506.767994 seconds
+  ReLU: 5.782875 seconds
+  Pool: 8.331832 seconds
+  FC:   0.598801 seconds
+  Softmax: 0.063981 seconds
 
-Net Accuracy: 78.84 % 
-Net Accuracy time:0.004001 seconds
-Free memory time:0.063994 seconds
-Total time:3215.899602 seconds
+Net Accuracy: 78.84 %
+Net Accuracy time:0.004002 seconds
+Free memory time:0.056076 seconds
+Total time:1523.054616 seconds
 END!
 ```
 
@@ -217,72 +214,72 @@ $ gprof ./cnn-cifar10-prof -b
 Flat profile:
 
 Each sample counts as 0.01 seconds.
-  %   cumulative   self              self     total           
- time   seconds   seconds    calls   s/call   s/call  name    
- 99.29   3194.24  3194.24   150000     0.02     0.02  conv_forward
-  0.46   3209.15    14.91   150000     0.00     0.00  pool_forward
-  0.24   3216.97     7.82   150000     0.00     0.00  relu_forward
-  0.07   3219.20     2.23        1     2.23     2.23  load_data
-  0.03   3220.09     0.89    50000     0.00     0.00  fc_forward
-  0.00   3220.13     0.04                             main
-  0.00   3220.14     0.01    50000     0.00     0.00  softmax_forward
-  0.00   3220.14     0.00        3     0.00     0.00  free_conv
-  0.00   3220.14     0.00        3     0.00     0.00  free_pool
-  0.00   3220.14     0.00        3     0.00     0.00  free_relu
-  0.00   3220.14     0.00        3     0.00     0.00  load_conv
-  0.00   3220.14     0.00        3     0.00     0.00  make_conv_layer
-  0.00   3220.14     0.00        3     0.00     0.00  make_pool_layer
-  0.00   3220.14     0.00        3     0.00     0.00  make_relu_layer
-  0.00   3220.14     0.00        2     0.00     0.00  malloc2D
-  0.00   3220.14     0.00        1     0.00     0.00  free_fc
-  0.00   3220.14     0.00        1     0.00     0.00  free_softmax
-  0.00   3220.14     0.00        1     0.00     0.00  load_fc
-  0.00   3220.14     0.00        1     0.00     0.00  make_fc_layer
-  0.00   3220.14     0.00        1     0.00     0.00  make_softmax_layer
+  %   cumulative   self              self     total
+ time   seconds   seconds    calls  ms/call  ms/call  name
+ 99.08   1508.10  1508.10   150000    10.05    10.05  conv_forward
+  0.56   1516.67     8.57   150000     0.06     0.06  pool_forward
+  0.38   1522.43     5.76   150000     0.04     0.04  relu_forward
+  0.06   1523.31     0.88        1   881.09   881.09  load_data
+  0.04   1523.93     0.62    50000     0.01     0.01  fc_forward
+  0.00   1523.95     0.02                             main
+  0.00   1523.96     0.01    50000     0.00     0.00  softmax_forward
+  0.00   1523.96     0.00        3     0.00     0.00  free_conv
+  0.00   1523.96     0.00        3     0.00     0.00  free_pool
+  0.00   1523.96     0.00        3     0.00     0.00  free_relu
+  0.00   1523.96     0.00        3     0.00     0.00  load_conv
+  0.00   1523.96     0.00        3     0.00     0.00  make_conv_layer
+  0.00   1523.96     0.00        3     0.00     0.00  make_pool_layer
+  0.00   1523.96     0.00        3     0.00     0.00  make_relu_layer
+  0.00   1523.96     0.00        2     0.00     0.00  malloc2D
+  0.00   1523.96     0.00        1     0.00     0.00  free_fc
+  0.00   1523.96     0.00        1     0.00     0.00  free_softmax
+  0.00   1523.96     0.00        1     0.00     0.00  load_fc
+  0.00   1523.96     0.00        1     0.00     0.00  make_fc_layer
+  0.00   1523.96     0.00        1     0.00     0.00  make_softmax_layer
 
 
                         Call graph
 
 
-granularity: each sample hit covers 2 byte(s) for 0.00% of 3220.14 seconds
+granularity: each sample hit covers 2 byte(s) for 0.00% of 1523.96 seconds
 
 index % time    self  children    called     name
                                                  <spontaneous>
-[1]    100.0    0.04 3220.10                 main [1]
-             3194.24    0.00  150000/150000      conv_forward [2]
-               14.91    0.00  150000/150000      pool_forward [3]
-                7.82    0.00  150000/150000      relu_forward [4]
-                2.23    0.00       1/1           load_data [5]
-                0.89    0.00   50000/50000       fc_forward [6]
+[1]    100.0    0.02 1523.94                 main [1]
+             1508.10    0.00  150000/150000      conv_forward [2]
+                8.57    0.00  150000/150000      pool_forward [3]
+                5.76    0.00  150000/150000      relu_forward [4]
+                0.88    0.00       1/1           load_data [5]
+                0.62    0.00   50000/50000       fc_forward [6]
                 0.01    0.00   50000/50000       softmax_forward [7]
                 0.00    0.00       3/3           make_conv_layer [12]
                 0.00    0.00       3/3           make_relu_layer [14]
                 0.00    0.00       3/3           make_pool_layer [13]
                 0.00    0.00       3/3           load_conv [11]
-                0.00    0.00       3/3           free_pool [9]
                 0.00    0.00       3/3           free_relu [10]
+                0.00    0.00       3/3           free_pool [9]
                 0.00    0.00       3/3           free_conv [8]
                 0.00    0.00       2/2           malloc2D [15]
                 0.00    0.00       1/1           make_fc_layer [19]
                 0.00    0.00       1/1           make_softmax_layer [20]
                 0.00    0.00       1/1           load_fc [18]
-                0.00    0.00       1/1           free_fc [16]
                 0.00    0.00       1/1           free_softmax [17]
+                0.00    0.00       1/1           free_fc [16]
 -----------------------------------------------
-             3194.24    0.00  150000/150000      main [1]
-[2]     99.2 3194.24    0.00  150000         conv_forward [2]
+             1508.10    0.00  150000/150000      main [1]
+[2]     99.0 1508.10    0.00  150000         conv_forward [2]
 -----------------------------------------------
-               14.91    0.00  150000/150000      main [1]
-[3]      0.5   14.91    0.00  150000         pool_forward [3]
+                8.57    0.00  150000/150000      main [1]
+[3]      0.6    8.57    0.00  150000         pool_forward [3]
 -----------------------------------------------
-                7.82    0.00  150000/150000      main [1]
-[4]      0.2    7.82    0.00  150000         relu_forward [4]
+                5.76    0.00  150000/150000      main [1]
+[4]      0.4    5.76    0.00  150000         relu_forward [4]
 -----------------------------------------------
-                2.23    0.00       1/1           main [1]
-[5]      0.1    2.23    0.00       1         load_data [5]
+                0.88    0.00       1/1           main [1]
+[5]      0.1    0.88    0.00       1         load_data [5]
 -----------------------------------------------
-                0.89    0.00   50000/50000       main [1]
-[6]      0.0    0.89    0.00   50000         fc_forward [6]
+                0.62    0.00   50000/50000       main [1]
+[6]      0.0    0.62    0.00   50000         fc_forward [6]
 -----------------------------------------------
                 0.01    0.00   50000/50000       main [1]
 [7]      0.0    0.01    0.00   50000         softmax_forward [7]
@@ -336,5 +333,198 @@ Index by function name
   [16] free_fc                 [1] main                    [3] pool_forward
    [9] free_pool              [12] make_conv_layer         [4] relu_forward
   [10] free_relu              [19] make_fc_layer           [7] softmax_forward
-  [17] free_softmax           [13] make_pool_layer
+  ```
+# 1200
 ```
+e$ ./cnn-cifar10
+Serial Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.026121 seconds
+Create Network time:0.000011 seconds
+Load Network Parameters time:0.008300 seconds
+Create Ouputs time:0.000045 seconds
+
+Net Forward total time:36.961910 seconds
+    Time for conv1: 11.898314 seconds
+    Time for relu1: 0.106129 seconds
+    Time for pool1: 0.148784 seconds
+    Time for conv2: 19.125811 seconds
+    Time for relu2: 0.030581 seconds
+    Time for pool2: 0.045081 seconds
+    Time for conv3: 5.555799 seconds
+    Time for relu3: 0.008876 seconds
+    Time for pool3: 0.013067 seconds
+    Time for fc: 0.013993 seconds
+    Time for softmax: 0.001692 seconds
+
+  Conv: 36.579924 seconds
+  ReLU: 0.145586 seconds
+  Pool: 0.206932 seconds
+  FC:   0.013993 seconds
+  Softmax: 0.001692 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000105 seconds
+Free memory time:0.001436 seconds
+Total time:36.997928 seconds
+END!
+```
+
+# 13400
+```
+$ ./cnn-cifar10
+Serial Code
+CNN for 13400 images
+Loading input batch 1...
+Loading input batch 2...
+Load Data time:0.255686 seconds
+Create Network time:0.000012 seconds
+Load Network Parameters time:0.008067 seconds
+Create Ouputs time:0.000170 seconds
+
+Net Forward total time:424.840853 seconds
+    Time for conv1: 136.926588 seconds
+    Time for relu1: 1.214971 seconds
+    Time for pool1: 1.697389 seconds
+    Time for conv2: 219.527978 seconds
+    Time for relu2: 0.353346 seconds
+    Time for pool2: 0.519897 seconds
+    Time for conv3: 64.006567 seconds
+    Time for relu3: 0.103321 seconds
+    Time for pool3: 0.150651 seconds
+    Time for fc: 0.160907 seconds
+    Time for softmax: 0.019369 seconds
+
+  Conv: 420.461133 seconds
+  ReLU: 1.671638 seconds
+  Pool: 2.367937 seconds
+  FC:   0.160907 seconds
+  Softmax: 0.019369 seconds
+
+Net Accuracy: 78.71 % 
+Net Accuracy time:0.001007 seconds
+Free memory time:0.015531 seconds
+Total time:425.121326 seconds
+END!
+```
+# 25600
+```
+$ ./cnn-cifar10
+Serial Code
+CNN for 25600 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Load Data time:0.556425 seconds
+Create Network time:0.000013 seconds
+Load Network Parameters time:0.008383 seconds
+Create Ouputs time:0.000253 seconds
+
+Net Forward total time:829.744195 seconds
+    Time for conv1: 263.455649 seconds
+    Time for relu1: 2.341174 seconds
+    Time for pool1: 3.272245 seconds
+    Time for conv2: 422.714944 seconds
+    Time for relu2: 0.677066 seconds
+    Time for pool2: 0.999888 seconds
+    Time for conv3: 135.141108 seconds
+    Time for relu3: 0.197380 seconds
+    Time for pool3: 0.289913 seconds
+    Time for fc: 0.309494 seconds
+    Time for softmax: 0.036631 seconds
+
+  Conv: 821.311701 seconds
+  ReLU: 3.215620 seconds
+  Pool: 4.562046 seconds
+  FC:   0.309494 seconds
+  Softmax: 0.036631 seconds
+
+Net Accuracy: 78.67 % 
+Net Accuracy time:0.002267 seconds
+Free memory time:0.031564 seconds
+Total time:830.343100 seconds
+END!
+```
+
+# 37800
+```
+$ ./cnn-cifar10
+Serial Code
+CNN for 37800 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Load Data time:0.713218 seconds
+Create Network time:0.000029 seconds
+Load Network Parameters time:0.008317 seconds
+Create Ouputs time:0.000344 seconds
+
+Net Forward total time:1188.364496 seconds
+    Time for conv1: 383.049704 seconds
+    Time for relu1: 3.408210 seconds
+    Time for pool1: 4.756963 seconds
+    Time for conv2: 614.281760 seconds
+    Time for relu2: 0.984848 seconds
+    Time for pool2: 1.452464 seconds
+    Time for conv3: 178.772402 seconds
+    Time for relu3: 0.286857 seconds
+    Time for pool3: 0.421673 seconds
+    Time for fc: 0.450496 seconds
+    Time for softmax: 0.053752 seconds
+
+  Conv: 1176.103866 seconds
+  ReLU: 4.679915 seconds
+  Pool: 6.631100 seconds
+  FC:   0.450496 seconds
+  Softmax: 0.053752 seconds
+
+Net Accuracy: 78.76 % 
+Net Accuracy time:0.002934 seconds
+Free memory time:0.044466 seconds
+Total time:1189.133804 seconds
+END!
+```
+
+# 50000
+$ make
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main_serial.c layers_serial.c malloc2D.c
+
+ ./cnn-cifar10 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.940874 seconds
+Create Network time:0.000011 seconds
+Load Network Parameters time:0.008290 seconds
+Create Ouputs time:0.000483 seconds
+
+Net Forward total time:1569.110519 seconds
+    Time for conv1: 505.895052 seconds
+    Time for relu1: 4.497355 seconds
+    Time for pool1: 6.276003 seconds
+    Time for conv2: 811.070243 seconds
+    Time for relu2: 1.301239 seconds
+    Time for pool2: 1.918563 seconds
+    Time for conv3: 235.958977 seconds
+    Time for relu3: 0.379663 seconds
+    Time for pool3: 0.555695 seconds
+    Time for fc: 0.594553 seconds
+    Time for softmax: 0.071594 seconds
+
+  Conv: 1552.924272 seconds
+  ReLU: 6.178257 seconds
+  Pool: 8.750261 seconds
+  FC:   0.594553 seconds
+  Softmax: 0.071594 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.004250 seconds
+Free memory time:0.065564 seconds
+Total time:1570.129991 seconds
+END!
